samples/_failures_safe/1761439992_c14bc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8d504ec.c: In function ‘main’:
./samples/SAFE/__tmp_a8d504ec.c:136: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_a8d504ec.c:135:5: error: expected declaration or statement at end of input
  135 |     if
      |     ^~
